Port current NeoForge version to Minecraft 1.20.1